apps/labrinth/k8s/scopes/api-v3/deployment-patch.yaml
# vscode-kubernetes-tools: exclude
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labrinth
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: labrinth
          resources:
            requests:
              cpu: "2"
              memory: 24Gi
            limits:
              cpu: "15"
              memory: 32Gi
