apps/labrinth/k8s/scopes/api-v3/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: routes
spec:
  parentRefs:
    - name: main-gateway
      namespace: ${GATEWAY_NAMESPACE}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v3
      backendRefs:
        - name: apiv3base-labrinth
          port: 80
